--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@
       scrollbar-width: none;
       /* Firefox */
     }
+    .custom-drop-shadow {
+      filter: drop-shadow(0 4mm 4mm rgb(112, 112, 112));
+    }
   }
 }
 
@@ -29,12 +32,16 @@
     @apply flex justify-around items-center
   }
 
-  .primary-text {
-    @apply md:text-7xl
+  .carousel-primary-text {
+    @apply md:text-[160px] font-bold
+  }
+
+  .secondary-text {
+    @apply md:text-2xl
   }
 
   .paragraph {
-    @apply md:text-2xl
+    @apply md:text-base
   }
 
 }
